--- a/Unsupervised Learning Project AllLife Bank Customer Segmentation.ipynb
+++ b/Unsupervised Learning Project AllLife Bank Customer Segmentation.ipynb
@@ -24,7 +24,7 @@
     "## **Objective**\n",
     "-----------------------------\n",
     "\n",
-    "**Identify different segments in the existing customer base**, taking into account their spending patterns as well as past interactions with the bank.\n",
+    "**To identify different segments in the existing customer base**, taking into account their spending patterns as well as past interactions with the bank.\n",
     "\n",
     "--------------------------\n",
     "## **About the data**\n",
@@ -48,17 +48,6 @@
    },
    "source": [
     "## **Importing libraries and overview of the dataset**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "bRGXtqR9OgTG"
-   },
-   "source": [
-    "**Note:** Please make sure you have installed the sklearn_extra library before running the below cell. If you have not installed the library, please run the below code to install the library:\n",
-    "\n",
-    "!pip install scikit-learn-extra"
    ]
   },
   {
@@ -1143,7 +1132,7 @@
    "source": [
     "scaler = StandardScaler()\n",
     "\n",
-    "# Standardize the data to have a mean of ~0 and a variance of 1\n",
+    "# Standardizing the data to have a mean of ~0 and a variance of 1\n",
     "data_scaled = StandardScaler().fit_transform(df)\n",
     "\n",
     "data_scaled"
@@ -2113,13 +2102,6 @@
     "\n",
     "By aligning marketing and service delivery upgrades with these customer segment's behaviors and preferences, AllLife Bank can aim to increase market penetration and improve customer satisfaction. Additionally, it would be beneficial to periodically reevaluate customer segmentation to track the effectiveness of implemented strategies and adapt to changes in customer behavior."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
