--- a/Unsupervised Learning Project AllLife Bank Customer Segmentation.ipynb
+++ b/Unsupervised Learning Project AllLife Bank Customer Segmentation.ipynb
@@ -1265,7 +1265,7 @@
     "id": "tuLEkmr1vvPQ"
    },
    "source": [
-    "#### **Create the cluster profiles using the summary statistics and box plots for each label**"
+    "#### **Creating the cluster profiles using the summary statistics and box plots for each label**"
    ]
   },
   {
@@ -1498,7 +1498,7 @@
     "id": "r0N7Ss06vvPS"
    },
    "source": [
-    "- Apply the Gaussian Mixture Model algorithm on the pca components"
+    "- Applying the Gaussian Mixture Model algorithm on the pca components"
    ]
   },
   {
@@ -1524,7 +1524,7 @@
     "id": "WCd92eCPtyH7"
    },
    "source": [
-    "#### **Create the cluster profiles using the summary statistics and box plots for each label**\n"
+    "#### **Creating the cluster profiles using the summary statistics and box plots for each label**\n"
    ]
   },
   {
@@ -1558,7 +1558,7 @@
     "id": "BBoBidgzt5Bf"
    },
    "source": [
-    "#### **Compare the clusters from both algorithms - K-means and Gaussian Mixture Model**"
+    "#### **Comparing the clusters from both algorithms - K-means and Gaussian Mixture Model**"
    ]
   },
   {
@@ -1732,7 +1732,7 @@
    "source": [
     "\n",
     "\n",
-    "- Apply the K-Medoids clustering algorithm on the pca components"
+    "- Applying the K-Medoids clustering algorithm on the pca components"
    ]
   },
   {
@@ -1758,7 +1758,7 @@
     "id": "YVK8vCW-tQU_"
    },
    "source": [
-    "#### **Create cluster profiles using the summary statistics and box plots for each label**"
+    "#### **Creating cluster profiles using the summary statistics and box plots for each label**"
    ]
   },
   {
@@ -1873,7 +1873,7 @@
     "id": "ZoGTRNLKyeqH"
    },
    "source": [
-    "#### **Compare the clusters from K-Means and K-Medoids** "
+    "#### **Comparing the clusters from K-Means and K-Medoids** "
    ]
   },
   {
